
cc_library(
	name = "geometry",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_range//:range",
		"@com_github_bazelboost_variant//:variant",
		"@com_github_bazelboost_concept_check//:concept_check",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_array//:array",
		"@com_github_bazelboost_algorithm//:algorithm",
		"@com_github_bazelboost_iterator//:iterator",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_tuple//:tuple",
		"@com_github_bazelboost_utility//:utility",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_math//:math",
		"@com_github_bazelboost_lexical_cast//:lexical_cast",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_predef//:predef",
		"@com_github_bazelboost_spirit//:spirit",
		"@com_github_bazelboost_fusion//:fusion",
		"@com_github_bazelboost_polygon//:polygon",
		"@com_github_bazelboost_container//:container",
		"@com_github_bazelboost_move//:move",
		"@com_github_bazelboost_serialization//:serialization",
		"@com_github_bazelboost_integer//:integer",
		"@com_github_bazelboost_tokenizer//:tokenizer",
		"@com_github_bazelboost_rational//:rational",
		"@com_github_bazelboost_multiprecision//:multiprecision",
		"@com_github_bazelboost_function_types//:function_types",
		"@com_github_bazelboost_qvm//:qvm"
	],
)
