load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/geometry/*.hpp",
    "include/boost/geometry/algorithms/*.hpp",
    "include/boost/geometry/algorithms/dispatch/*.hpp",
    "include/boost/geometry/arithmetic/*.hpp",
    "include/boost/geometry/core/*.hpp",
    "include/boost/geometry/extensions/*.hpp",
    "include/boost/geometry/extensions/algebra/*.hpp",
    "include/boost/geometry/extensions/algebra/algorithms/*.hpp",
    "include/boost/geometry/extensions/algebra/core/*.hpp",
    "include/boost/geometry/extensions/algebra/geometries/*.hpp",
    "include/boost/geometry/extensions/algebra/geometries/concepts/*.hpp",
    "include/boost/geometry/extensions/algorithms/*.hpp",
    "include/boost/geometry/extensions/astronomy/core*.hpp",
    "include/boost/geometry/extensions/contrib/*.hpp",
    "include/boost/geometry/extensions/contrib/ttmath/*.hpp",
    "include/boost/geometry/extensions/gis/*.hpp",
    "include/boost/geometry/extensions/gis/geographic/*.hpp",
    "include/boost/geometry/extensions/gis/io/*.hpp",
    "include/boost/geometry/extensions/gis/io/shapefile/*.hpp",
    "include/boost/geometry/extensions/gis/io/shapelib/*.hpp",
    "include/boost/geometry/extensions/gis/io/vershape/*.hpp",
    "include/boost/geometry/extensions/gis/io/wkb/*.hpp",
    "include/boost/geometry/extensions/gis/latlong/*.hpp",
    "include/boost/geometry/extensions/index/rtree/*.hpp",
    "include/boost/geometry/extensions/iterators/*.hpp",
    "include/boost/geometry/extensions/multi/algorithms/*.hpp",
    "include/boost/geometry/extensions/multi/gis/io/wkb/*.hpp",
    "include/boost/geometry/extensions/nsphere/*.hpp",
    "include/boost/geometry/extensions/nsphere/algorithms/*.hpp",
    "include/boost/geometry/extensions/nsphere/core/*.hpp",
    "include/boost/geometry/extensions/nsphere/geometries/*.hpp",
    "include/boost/geometry/extensions/nsphere/geometries/concepts/*.hpp",
    "include/boost/geometry/extensions/nsphere/strategies/cartesian/*.hpp",
    "include/boost/geometry/extensions/nsphere/views/*.hpp",
    "include/boost/geometry/extensions/strategies/cartesian/*.hpp",
    "include/boost/geometry/extensions/triangulation/strategies/cartesian/*.hpp",
    "include/boost/geometry/extensions/util/*.hpp",
    "include/boost/geometry/extensions/views/*.hpp",
    "include/boost/geometry/formulas/*.hpp",
    "include/boost/geometry/geometries/*.hpp",
    "include/boost/geometry/geometries/adapted/*.hpp",
    "include/boost/geometry/geometries/adapted/boost_polygon/*.hpp",
    "include/boost/geometry/geometries/adapted/boost_range/*.hpp",
    "include/boost/geometry/geometries/concepts/*.hpp",
    "include/boost/geometry/geometries/register/*.hpp",
    "include/boost/geometry/index/*.hpp",
    "include/boost/geometry/index/adaptors/*.hpp",
    "include/boost/geometry/io/*.hpp",
    "include/boost/geometry/io/dsv/*.hpp",
    "include/boost/geometry/io/svg/*.hpp",
    "include/boost/geometry/io/wkt/*.hpp",
    "include/boost/geometry/iterators/*.hpp",
    "include/boost/geometry/iterators/dispatch/*.hpp",
    "include/boost/geometry/multi/*.hpp",
    "include/boost/geometry/multi/algorithms/*.hpp",
    "include/boost/geometry/multi/core/*.hpp",
    "include/boost/geometry/multi/geometries/*.hpp",
    "include/boost/geometry/multi/geometries/concepts/*.hpp",
    "include/boost/geometry/multi/geometries/register/*.hpp",
    "include/boost/geometry/multi/io/dsv/*.hpp",
    "include/boost/geometry/multi/io/wkt/*.hpp",
    "include/boost/geometry/multi/strategies/cartesian/*.hpp",
    "include/boost/geometry/policies/*.hpp",
    "include/boost/geometry/policies/is_valid/*.hpp",
    "include/boost/geometry/policies/relate/*.hpp",
    "include/boost/geometry/policies/robustness/*.hpp",
    "include/boost/geometry/srs/*.hpp",
    "include/boost/geometry/srs/projections/*.hpp",
    "include/boost/geometry/srs/projections/impl/*.hpp",
    "include/boost/geometry/srs/projections/proj/*.hpp",
    "include/boost/geometry/strategies/*.hpp",
    "include/boost/geometry/strategies/agnostic/*.hpp",
    "include/boost/geometry/strategies/area/*.hpp",
    "include/boost/geometry/strategies/cartesian/*.hpp",
    "include/boost/geometry/strategies/concepts/*.hpp",
    "include/boost/geometry/strategies/envelope/*.hpp",
    "include/boost/geometry/strategies/expand/*.hpp",
    "include/boost/geometry/strategies/geographic/*.hpp",
    "include/boost/geometry/strategies/spherical/*.hpp",
    "include/boost/geometry/strategies/transform/*.hpp",
    "include/boost/geometry/strategy/*.hpp",
    "include/boost/geometry/strategy/cartesian/*.hpp",
    "include/boost/geometry/strategy/geographic/*.hpp",
    "include/boost/geometry/strategy/spherical/*.hpp",
    "include/boost/geometry/util/*.hpp",
    "include/boost/geometry/views/*.hpp",
]

cc_library(
    name = "geometry_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "geometry",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [":geometry_internal"],
)
